macros/tests/ui/fail/wrong_ffi_impl_arg.stderr
error: expected `c_type_name`, `prefix`, or `ty`
  --> tests/ui/fail/wrong_ffi_impl_arg.rs:24:12
   |
24 | #[ffi_impl(type_name = "TestObjectPtr")]
   |            ^^^^^^^^^
